# pyhnefatafl

./: .gitignore  README.md  environment.yml  muzero.ipynb  neural_net.ipynb  play.py  pyproject.toml  train.py
.devcontainer/: devcontainer.json
src/alphazero/: MCTS.py  arena.py  coach.py  game.py  main.py
src/hnefatafl/: __init__.py  ai.py  board.py  board_old.py  env.py  game.py  muzero.py  utils.py
tests/: test_board.py  test_board_old.py
tests/hnefatafl/: test_game_logic.py  test_methods.py  test_rules.py
