[tool.poetry]
name = "hnefatafl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "hnefatafl", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9 <3.12"
numpy = "^1.24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
pytest-mock = "^3.10.0"

[tool.poetry.group.ai.dependencies]
PettingZoo = "^1.22.3"
tensorflow = "^2.11.0"
tflearn = "^0.5.0"
tensorboard = "^2.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
