[tool.poetry]
name = "hnefatafl"
version = "0.1.0"
description = ""
authors = ["SootyOwl <you@example.com>"]
readme = "README.md"
packages = [{ include = "hnefatafl", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8 <3.12"
numpy = "^1.24.1"
scipy = "^1.10.0"
coloredlogs = "^15.0.1"
tqdm = "^4.64.1"
memory-profiler = "^0.61.0"
matplotlib = "^3.7.0"
ipywidgets = "^8.0.4"
graphviz = "^0.20.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
pytest-mock = "^3.10.0"
ipykernel = "^6.21.1"

[tool.poetry.group.ai.dependencies]
torch = "1.13.1.post200"  # ensures that the torch version from conda is not upgraded
muzero-baseline = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
